--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1022,6 +1022,7 @@
          (org-log-done 'time)
          (org-adapt-indentation t)
          (org-confirm-babel-evaluate nil)
+         (org-agenda-overriding-columns-format "%ITEM %Effort{:} %CLOCKSUM %PRIORITY")
          :config
          (defun my:org-open-url-with-default ()
            (interactive)
