--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1086,11 +1086,12 @@
          (org-agenda-span 'day)
          (org-agenda-remove-tags t)
          (org-agenda-current-time-string "← now ───────────────────")
-         ;; (org-agenda-todo-ignore-scheduled 'feature)
+         (org-agenda-todo-ignore-scheduled 'feature)
          (org-agenda-skip-deadline-prewarning-if-scheduled t)
          (org-todo-keywords '((sequence "TODO(t)" "IN PROGRESS(i)" "|" "DONE(d)")
-                              (sequence "WAITING(w@/!)" "CANCELLED(c@/!)" "SOMEDAY(s)")))
-         ;; (org-habit-graph-column 43)
+                              (sequence "WAITNING(w)" "SOMEDAY(s)" "|" "CANCELLED(c/!)")))
+         (org-agenda-custom-commands '(("t" todo "TODO")
+                                       ("A" todo)))
          :config
          (add-to-list 'org-modules 'org-habit t)
          (setq org-agenda-prefix-format
@@ -1098,8 +1099,8 @@
                (todo . " %i %-12:c")
                (tags . " %i %-12:c")
                (search . " %i %-12:c")))
-         (setq my:roam-task-tag "todo")
 
+         (setq my:roam-task-tag "todo")
          (defun my:org-roam-todo-entry-p ()
            "Return non-nil if current buffer has any todo entry."
            (seq-find (lambda (type) (eq type 'todo))
@@ -1107,7 +1108,6 @@
                          'headline
                        (lambda (h)
                          (org-element-property :todo-type h)))))
-
          (defun my:org-roam-note-buffer-p ()
            "Return non-nil if the currently visited buffer is an Org Roam note."
            (and buffer-file-name
