--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1799,7 +1799,7 @@
 
     (use-package eshell-toggle
       :ensure t
-      :bind* ("C-t" . eshell-toggle)
+      ;; :bind* ("C-t" . eshell-toggle)
       :custom
       (eshell-toggle-size-fraction 2))
 
