Change from define-key to keymap-set

--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -351,37 +351,26 @@
        :init (defvar my:tab-bar-map (make-sparse-keymap)
                "My original keymap binded for tab-bar.")
        (defalias 'my:tab-bar-prefix my:tab-bar-map)
-       (define-key global-map (kbd "C-o") 'my:tab-bar-prefix)
-       (define-key my:tab-bar-map (kbd "c")   'tab-new)
-       (define-key my:tab-bar-map (kbd "C-c") 'tab-new)
-       (define-key my:tab-bar-map (kbd "k")   'tab-close)
-       (define-key my:tab-bar-map (kbd "C-k") 'tab-close)
-       (define-key my:tab-bar-map (kbd "n")   'tab-next)
-       (define-key my:tab-bar-map (kbd "C-n") 'tab-next)
-       (define-key my:tab-bar-map (kbd "TAB") 'tab-next)
-       (define-key my:tab-bar-map (kbd "p")   'tab-previous)
-       (define-key my:tab-bar-map (kbd "C-p") 'tab-previous)
-       (define-key my:tab-bar-map (kbd "1") '(lambda () (interactive) (tab-bar-select-tab 1)))
-       (define-key my:tab-bar-map (kbd "2") '(lambda () (interactive) (tab-bar-select-tab 2)))
-       (define-key my:tab-bar-map (kbd "3") '(lambda () (interactive) (tab-bar-select-tab 3)))
-       (define-key my:tab-bar-map (kbd "4") '(lambda () (interactive) (tab-bar-select-tab 4)))
-       (define-key my:tab-bar-map (kbd "5") '(lambda () (interactive) (tab-bar-select-tab 5)))
-       (define-key my:tab-bar-map (kbd "6") '(lambda () (interactive) (tab-bar-select-tab 6)))
-       (define-key my:tab-bar-map (kbd "7") '(lambda () (interactive) (tab-bar-select-tab 7)))
-       (define-key my:tab-bar-map (kbd "8") '(lambda () (interactive) (tab-bar-select-tab 8)))
-       (define-key my:tab-bar-map (kbd "9") '(lambda () (interactive) (tab-bar-select-tab 9)))
-       (define-key my:tab-bar-map (kbd "0") '(lambda () (interactive) (tab-bar-select-tab 0)))
-
-       ;; (defun my:tab-bar-tab-name-truncated ()
-       ;;   "Custom: Generate tab name from the buffer of the selected window."
-       ;;   (let ((tab-name (buffer-name (window-buffer (minibuffer-selected-window))))
-       ;;         (ellipsis (cond (tab-bar-tab-name-ellipsis)
-       ;;                         ((char-displayable-p ?…) "…")
-       ;;                         ("..."))))
-       ;;     (if (< (length tab-name) tab-bar-tab-name-truncated-max)
-       ;;         (format "%-12s" tab-name)
-       ;;       (propertize (truncate-string-to-width tab-name tab-bar-tab-name-truncated-max nil
-       ;;                                             nil ellipsis) 'help-echo tab-name))))
+       (keymap-set global-map "C-o" 'my:tab-bar-prefix)
+       (keymap-set my:tab-bar-map "c"   'tab-new)
+       (keymap-set my:tab-bar-map "C-c" 'tab-new)
+       (keymap-set my:tab-bar-map "k"   'tab-close)
+       (keymap-set my:tab-bar-map "C-k" 'tab-close)
+       (keymap-set my:tab-bar-map "n"   'tab-next)
+       (keymap-set my:tab-bar-map "C-n" 'tab-next)
+       (keymap-set my:tab-bar-map "TAB" 'tab-next)
+       (keymap-set my:tab-bar-map "p"   'tab-previous)
+       (keymap-set my:tab-bar-map "C-p" 'tab-previous)
+       (keymap-set my:tab-bar-map "1" '(lambda () (interactive) (tab-bar-select-tab 1)))
+       (keymap-set my:tab-bar-map "2" '(lambda () (interactive) (tab-bar-select-tab 2)))
+       (keymap-set my:tab-bar-map "3" '(lambda () (interactive) (tab-bar-select-tab 3)))
+       (keymap-set my:tab-bar-map "4" '(lambda () (interactive) (tab-bar-select-tab 4)))
+       (keymap-set my:tab-bar-map "5" '(lambda () (interactive) (tab-bar-select-tab 5)))
+       (keymap-set my:tab-bar-map "6" '(lambda () (interactive) (tab-bar-select-tab 6)))
+       (keymap-set my:tab-bar-map "7" '(lambda () (interactive) (tab-bar-select-tab 7)))
+       (keymap-set my:tab-bar-map "8" '(lambda () (interactive) (tab-bar-select-tab 8)))
+       (keymap-set my:tab-bar-map "9" '(lambda () (interactive) (tab-bar-select-tab 9)))
+       (keymap-set my:tab-bar-map "0" '(lambda () (interactive) (tab-bar-select-tab 0)))
        :custom
        (tab-bar-close-button-show      nil)
        (tab-bar-close-last-tab-choice  nil)
@@ -964,17 +953,17 @@
          :config
          (defun jtsx-bind-keys-to-mode-map (mode-map)
            "Bind keys to MODE-MAP."
-           (define-key mode-map (kbd "C-c C-j") 'jtsx-jump-jsx-element-tag-dwim)
-           (define-key mode-map (kbd "C-c j o") 'jtsx-jump-jsx-opening-tag)
-           (define-key mode-map (kbd "C-c j c") 'jtsx-jump-jsx-closing-tag)
-           (define-key mode-map (kbd "C-c j r") 'jtsx-rename-jsx-element)
-           (define-key mode-map (kbd "C-c <down>") 'jtsx-move-jsx-element-tag-forward)
-           (define-key mode-map (kbd "C-c <up>") 'jtsx-move-jsx-element-tag-backward)
-           (define-key mode-map (kbd "C-c C-<down>") 'jtsx-move-jsx-element-forward)
-           (define-key mode-map (kbd "C-c C-<up>") 'jtsx-move-jsx-element-backward)
-           (define-key mode-map (kbd "C-c C-S-<down>") 'jtsx-move-jsx-element-step-in-forward)
-           (define-key mode-map (kbd "C-c C-S-<up>") 'jtsx-move-jsx-element-step-in-backward)
-           (define-key mode-map (kbd "C-c j w") 'jtsx-wrap-in-jsx-element))
+           (keymap-set mode-map "C-c C-j" 'jtsx-jump-jsx-element-tag-dwim)
+           (keymap-set mode-map "C-c j o" 'jtsx-jump-jsx-opening-tag)
+           (keymap-set mode-map "C-c j c" 'jtsx-jump-jsx-closing-tag)
+           (keymap-set mode-map "C-c j r" 'jtsx-rename-jsx-element)
+           (keymap-set mode-map "C-c <down>" 'jtsx-move-jsx-element-tag-forward)
+           (keymap-set mode-map "C-c <up>" 'jtsx-move-jsx-element-tag-backward)
+           (keymap-set mode-map "C-c C-<down>" 'jtsx-move-jsx-element-forward)
+           (keymap-set mode-map "C-c C-<up>" 'jtsx-move-jsx-element-backward)
+           (keymap-set mode-map "C-c C-S-<down>" 'jtsx-move-jsx-element-step-in-forward)
+           (keymap-set mode-map "C-c C-S-<up>" 'jtsx-move-jsx-element-step-in-backward)
+           (keymap-set mode-map "C-c j w" 'jtsx-wrap-in-jsx-element))
 
          (defun jtsx-bind-keys-to-jsx-mode-map ()
              (jtsx-bind-keys-to-mode-map jsx-mode-map))
