--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1278,7 +1278,10 @@
                                         :unnarrowed t)
                                        ))
          (org-roam-dailies-capture-templates  '(("j" "journal" entry
-                                                 "** TODO <%<%Y-%m-%d %a %H:%M>> %?"
+                                                 "** TODO Anki\n   SCHEDULED: <%<%Y-%m-%d %a>>\n** TODO Speak\n   SCHEDULED: <%<%Y-%m-%d %a>>\n** TODO Hanon of English\n   SCHEDULED: <%<%Y-%m-%d %a>>\n** TODO Research Paper\n   SCHEDULED: <%<%Y-%m-%d %a>>\n** TODO Anews & RSS\n   SCHEDULED: <%<%Y-%m-%d %a>>\n"
+                                                 :jump-to-captured t
+                                                 :immediate-finish t
+                                                 :unnarrowed t
                                                  :target (file+head+olp "%<%Y-%m>.org"
                                                                         "#+title: %<%Y-%m>\n"
                                                                         ("%<%Y-%m-%d %a>")))))
