Change consult config

--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -553,6 +553,51 @@
       (use-package consult
         :ensure t
         :demand t
+        :bind (("C-s" . my:consult-line)
+               ("C-c M-x" . consult-mode-command)
+               ("C-c h" . consult-history)
+               ([remap Info-search] . consult-info)
+               ("C-x 4 b" . consult-buffer-other-window)
+               ("C-x 5 b" . consult-buffer-other-frame)
+               ("C-x t b" . consult-buffer-other-tab)
+               ("C-x r b" . consult-bookmark)
+               ("C-x p b" . consult-project-buffer)
+               ;; Other custom bindings
+               ("M-y" . consult-yank-pop)
+               ;; M-g bindings in `goto-map'
+               ("M-g e" . consult-compile-error)
+               ("M-g f" . consult-flycheck)
+               ("M-g g" . consult-goto-line)
+               ("M-g M-g" . consult-goto-line)
+               ("M-g o" . consult-outline)
+               ("M-g m" . consult-mark)
+               ("M-g k" . consult-global-mark)
+               ("M-g i" . consult-imenu)
+               ("M-g I" . consult-imenu-multi)
+               ;; M-s bindings in `search-map'
+               ("M-s d" . consult-find)
+               ("M-s c" . consult-locate)
+               ("M-s g" . consult-grep)
+               ("M-s G" . consult-git-grep)
+               ("M-s r" . consult-ripgrep)
+               ("M-s l" . consult-line)
+               ("M-s L" . consult-line-multi)
+               ("M-s k" . consult-keep-lines)
+               ("M-s u" . consult-focus-lines)
+               ;; Isearch integration
+               ("M-s e" . consult-isearch-history)
+               :map isearch-mode-map
+               ("M-e" . consult-isearch-history)
+               ("M-s e" . consult-isearch-history)
+               ("M-s l" . consult-line)
+               ("M-s L" . consult-line-multi)
+               ;; Minibuffer history
+               :map minibuffer-local-map
+               ("M-s" . consult-history)
+               ("M-r" . consult-history))
+        :bind* (("C-c C-a" . consult-buffer)
+                ("C-z" . consult-imenu))
+        :hook (completion-list-mode . consult-preview-at-point-mode)
         :init
         (defun my:consult-line
             (&optional
@@ -560,22 +605,18 @@
           (interactive "P")
           (if at-point (consult-line (thing-at-point 'symbol))
             (consult-line)))
+        (setq xref-show-xrefs-function #'consult-xref
+              xref-show-definitions-function #'consult-xref)
         :custom
         (recentf-mode t)
-        :bind (("C-s" . my:consult-line))
-        :bind* (("C-c C-a" . consult-buffer)
-                ("C-z" . consult-imenu)
-                ([remap goto-line] . consult-goto-line)
-                ([remap yank-pop] . consult-yank-pop)))
-
-      (use-package consult-ghq
-        :ensure t
-        :after consult
-        :bind* (("C-c [" . consult-ghq-switch-project)
-                ("C-c ]" . consult-ghq-grep))
-        :custom
-        (consult-ghq-find-function #'consult-find)
-        (consult-ghq-grep-function #'consult-grep))
+        :config
+        (require 'keymap) ;; keymap-substitute requires emacs version 29.1?
+        (require 'cl-seq)
+        (keymap-substitute project-prefix-map #'project-find-regexp #'consult-ripgrep)
+        (cl-nsubstitute-if
+         '(consult-ripgrep "Find regexp")
+         (pcase-lambda (`(,cmd _)) (eq cmd #'project-find-regexp))
+         project-switch-commands))
     #+end_src
 *** marginalia
     #+begin_src emacs-lisp
