--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1730,7 +1730,7 @@
    #+begin_src emacs-lisp
      (use-package mu4e
        :if (and (executable-find "mu") (file-directory-p my:d:nextcloud) (display-graphic-p))
-       :load-path (lambda () (if (eq system-type 'darwin) "/usr/local/share/emacs/site-lisp/mu/mu4e/" "/usr/share/emacs/site-lisp/mu4e/"))
+       :load-path (lambda () (if (eq system-type 'darwin) (expand-file-name ".local/state/nix/profile/share/emacs/site-lisp/mu4e" (getenv "HOME")) "/usr/share/emacs/site-lisp/mu4e/"))
        :demand t
        :bind (("C-c m" . mu4e)
               :map mu4e-minibuffer-search-query-map
