--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -502,6 +502,8 @@
    #+begin_src emacs-lisp
      (use-package mac
        :when (eq 'mac window-system)
+       :init
+       (set-frame-parameter nil 'ns-appearance 'dark)
        :custom
        (mac-control-modifier 'control)
        (mac-option-modifier 'super)
@@ -514,6 +516,8 @@
    #+begin_src emacs-lisp
      (use-package ns
        :if (eq 'ns window-system)
+       :init
+       (set-frame-parameter nil 'ns-appearance 'dark)
        :custom
        (ns-control-modifier 'control)
        (ns-option-modifier 'super)
@@ -876,9 +880,9 @@
 * Writing
 ** Spell Checker
 *** jinx
+    This uses natively-compiled code, I install this alongside emacs via nix.
     #+begin_src emacs-lisp
       (use-package jinx
-        :ensure t
         :hook ((org-mode-hook markdown-mode-hook) . my:jinx-mode-enable)
         :bind (("C-;" . jinx-correct)
                ("C-x @ ;" . jinx-correct) ; for wezterm
@@ -1730,8 +1734,7 @@
    #+begin_src emacs-lisp
      (use-package mu4e
        :if (and (executable-find "mu") (file-directory-p my:d:nextcloud) (display-graphic-p))
-       :load-path (lambda () (if (eq system-type 'darwin) (expand-file-name ".local/state/nix/profile/share/emacs/site-lisp/mu4e" (getenv "HOME")) "/usr/share/emacs/site-lisp/mu4e/"))
-       :demand t
+       :demand t  ; load-path has already been set by nix
        :bind (("C-c m" . mu4e)
               :map mu4e-minibuffer-search-query-map
               ("C-j" . skk-kakutei)
@@ -1850,18 +1853,18 @@
 ** Pdf
    #+begin_src emacs-lisp
      (use-package pdf-tools
-       :ensure t
        :if (display-graphic-p)
-       :demand t
+       :demand t ; load-path has already been set by nix
        :commands (open-pdf-in-external-app)
        :hook (pdf-view-mode-hook . (lambda() (display-line-numbers-mode -1)))
-       :mode (("\\.pdf\\'" . pdf-view-mode))
+       ;; :mode (("\\.pdf\\'" . pdf-view-mode))
        :bind (nil
               :map pdf-view-mode-map
               ("C-s" . isearch-forward)
               ("C-c C-o" . open-pdf-in-external-app))
        :config
-       (pdf-tools-install)
+       (setq pdf-info-epdfinfo-program (expand-file-name ".local/state/nix/profile/share/emacs/site-lisp/elpa/pdf-tools-20230611.239/epdfinfo" (getenv "HOME")))
+       (pdf-loader-install)
        (setq-default pdf-view-display-size 'fit-page)
        (setq pdf-view-incompatible-modes '(linum-mode linum-relative-mode helm-linum-relative-mode nlinum-mode nlinum-hl-mode nlinum-relative-mode yalinum-mode))
        (setq pdf-annot-activate-created-annotations t)
